--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@ canvas {
   box-shadow: 0 10px 30px rgba(0,0,0,.35);
 }
 
-/* OVERLAYS */
 .overlay {
   position: absolute;
   inset: 0;
@@ -62,37 +61,16 @@ button {
   cursor: pointer;
 }
 button:hover { background: #ffc107; }
-.qcm button { width: 100%; margin: 6px 0; }
 
 #footer {
   margin-top: 10px;
   color: white;
   font-weight: bold;
 }
-
-#rotateMsg {
-  position: fixed;
-  inset: 0;
-  background: #0d47a1;
-  color: white;
-  display: none;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  padding: 30px;
-  z-index: 20;
-  font-size: 18px;
-}
 </style>
 </head>
 
 <body>
-
-<div id="rotateMsg">
-📱🔄<br><br>
-Ce jeu se joue en <b>mode paysage</b><br>
-Tourne ton téléphone 🙂
-</div>
 
 <div id="container">
   <canvas id="game"></canvas>
@@ -100,9 +78,9 @@ Tourne ton téléphone 🙂
   <div id="start" class="overlay">
     <h2>Runner Mission Locale</h2>
     <p>
-      🎯 Saute pour éviter les obstacles<br>
+      Saute pour éviter les obstacles<br>
       Clic / toucher / <b>Espace</b><br><br>
-      🧠 En cas de collision, répond à une question
+      Gameplay inspiré du Dino Google
     </p>
     <button id="startBtn">Démarrer</button>
   </div>
@@ -113,15 +91,13 @@ Tourne ton téléphone 🙂
 <div id="footer">La Mission Locale vous souhaite un super jeu !</div>
 
 <script>
-/* ===== CANVAS RESPONSIVE ===== */
+/* ===== CANVAS ===== */
 const canvas = document.getElementById("game");
 const ctx = canvas.getContext("2d");
 
 function resizeCanvas(){
-  const container = document.getElementById("container");
-  const w = container.clientWidth;
+  const w = document.getElementById("container").clientWidth;
   const h = Math.min(window.innerHeight * 0.9, w * 9 / 16);
-
   canvas.width = w;
   canvas.height = h;
 }
@@ -130,130 +106,64 @@ resizeCanvas();
 
 /* ===== GAME STATE ===== */
 let state = "menu";
-let paused = false;
-let score = 0, level = 1;
-let speed = 2;
-let spawnDelay = 1400;
-let immunity = 0;
-let countdown = 0;
-
-const player = { x: 120, y: 0, r: 22, vy: 0 };
-let obstacles = [];
+let score = 0;
+let speed = 6;
+let spawnDelay = 1600;
 let lastSpawn = 0;
 
-/* ===== SOL ADAPTATIF ===== */
-function groundY() {
+/* ===== PLAYER (STYLE DINO) ===== */
+const player = {
+  x: 120,
+  y: 0,
+  r: 22,
+  vy: 0,
+  onGround: true
+};
+
+function groundY(){
   return canvas.height - 80;
 }
 
-/* ===== QUESTIONS ===== */
-const QUESTIONS = [
-  {q:"Objectif d’un CV ?",c:["Décrocher un entretien","Raconter sa vie","Se préparer"],a:0},
-  {q:"Photo sur le CV ?",c:["Professionnelle","Obligatoire","En soirée"],a:0},
-  {q:"Ordre des expériences ?",c:["De la plus récente à l’ancienne","Chronologique","Aléatoire"],a:0},
-  {q:"CV lisible ?",c:["Clair et structuré","Beaucoup de couleurs","Texte serré"],a:0},
-  {q:"Fautes d’orthographe ?",c:["À éviter","Acceptables","Pas importantes"],a:0},
-  {q:"Titre du CV ?",c:["Poste recherché","Nom du lycée","Âge"],a:0}
-];
-let questionDeck = [];
-
-function initQuestions(){
-  questionDeck = [...QUESTIONS].sort(() => Math.random() - 0.5);
-}
-
+/* ===== RESET ===== */
 function resetGame(){
   score = 0;
-  level = 1;
-  speed = 2;
-  spawnDelay = 1400;
-  immunity = 120;
-  obstacles = [];
+  speed = 6;
+  spawnDelay = 1600;
+  lastSpawn = 0;
   player.y = groundY();
   player.vy = 0;
-  lastSpawn = 0;
-  initQuestions();
+  player.onGround = true;
+  obstacles = [];
 }
 
 /* ===== START ===== */
 document.getElementById("startBtn").onclick = () => {
   document.getElementById("start").style.display = "none";
   resetGame();
-  countdown = 180;
-  state = "countdown";
+  state = "play";
 };
 
 /* ===== CONTROLS ===== */
 function jump(){
-  if(state === "play" && !paused && player.y >= groundY()){
-    player.vy = -12;
+  if(state === "play" && player.onGround){
+    player.vy = -11.5; // saut Dino
+    player.onGround = false;
   }
 }
 window.addEventListener("keydown", e => { if(e.code === "Space") jump(); });
 canvas.addEventListener("click", jump);
 canvas.addEventListener("touchstart", jump);
 
-/* ===== ORIENTATION ===== */
-const rotateMsg = document.getElementById("rotateMsg");
-function checkOrientation(){
-  if(window.innerWidth < 900 && window.innerHeight > window.innerWidth){
-    rotateMsg.style.display = "flex";
-    paused = true;
-  } else {
-    rotateMsg.style.display = "none";
-    paused = false;
-  }
-}
-window.addEventListener("resize", checkOrientation);
-checkOrientation();
-
 /* ===== OBSTACLES ===== */
+let obstacles = [];
+
 function spawnObstacle(){
-  let type = "ground";
-  if(level >= 3 && Math.random() < 0.3) type = "air";
-  if(level >= 6 && Math.random() < 0.2) type = "small";
-
-  let h = type === "small" ? 24 : 40;
-
+  const h = 40;
   obstacles.push({
-    x: canvas.width + 30,
-    y: type === "air"
-      ? groundY() - 90 - Math.random() * 40
-      : groundY() - h + 10,
-    w: type === "small" ? 20 : 28,
+    x: canvas.width + 20,
+    y: groundY() - h + 10,
+    w: 26,
     h: h
-  });
-}
-
-/* ===== QUESTIONS ===== */
-function showQuestion(){
-  state = "question";
-  const box = document.getElementById("question");
-
-  if(questionDeck.length === 0){
-    document.getElementById("start").style.display = "flex";
-    state = "menu";
-    return;
-  }
-
-  const q = questionDeck.shift();
-  box.innerHTML = `<h3>${q.q}</h3><div class="qcm"></div>`;
-  box.style.display = "flex";
-
-  q.c.forEach((txt,i)=>{
-    const b = document.createElement("button");
-    b.textContent = txt;
-    b.onclick = ()=>{
-      box.style.display = "none";
-      if(i === q.a){
-        immunity = 120;
-        obstacles = [];
-        state = "play";
-      } else {
-        document.getElementById("start").style.display = "flex";
-        state = "menu";
-      }
-    };
-    box.querySelector(".qcm").appendChild(b);
   });
 }
 
@@ -261,51 +171,43 @@ function showQuestion(){
 function loop(time){
   ctx.clearRect(0,0,canvas.width,canvas.height);
 
-  if(state === "countdown"){
-    ctx.fillStyle = "#0d47a1";
-    ctx.font = "bold 80px Arial";
-    ctx.textAlign = "center";
-    ctx.textBaseline = "middle";
-    ctx.fillText(Math.ceil(countdown/60), canvas.width/2, canvas.height/2);
-    countdown--;
-    if(countdown <= 0) state = "play";
-    requestAnimationFrame(loop);
-    return;
-  }
+  if(state === "play"){
 
-  if(state === "play" && !paused){
-    player.vy += 0.6;
+    /* PHYSIQUE DINO */
+    player.vy += 0.65;
     player.y += player.vy;
-    if(player.y > groundY()){ player.y = groundY(); player.vy = 0; }
 
+    if(player.y >= groundY()){
+      player.y = groundY();
+      player.vy = 0;
+      player.onGround = true;
+    }
+
+    /* SPAWN OBSTACLES */
     if(time - lastSpawn > spawnDelay){
       spawnObstacle();
       lastSpawn = time;
+      spawnDelay = 1400 + Math.random() * 600;
     }
 
-    obstacles.forEach(o=>{
+    /* OBSTACLES */
+    obstacles.forEach(o => {
       o.x -= speed;
-      ctx.fillStyle = immunity > 0 ? "#81c784" : "#e53935";
-      ctx.fillRect(o.x,o.y,o.w,o.h);
+      ctx.fillStyle = "#e53935";
+      ctx.fillRect(o.x, o.y, o.w, o.h);
 
-      const dx = Math.max(o.x, Math.min(player.x, o.x+o.w));
-      const dy = Math.max(o.y, Math.min(player.y, o.y+o.h));
-      if(immunity <= 0 && (player.x-dx)**2 + (player.y-dy)**2 < player.r**2){
-        showQuestion();
+      const dx = Math.max(o.x, Math.min(player.x, o.x + o.w));
+      const dy = Math.max(o.y, Math.min(player.y, o.y + o.h));
+      if((player.x - dx)**2 + (player.y - dy)**2 < player.r**2){
+        document.getElementById("start").style.display = "flex";
+        state = "menu";
       }
     });
 
     obstacles = obstacles.filter(o => o.x + o.w > 0);
 
     score++;
-    speed += 0.0008;
-
-    if(score % 350 === 0){
-      level++;
-      spawnDelay = Math.max(380, spawnDelay - 120);
-    }
-
-    if(immunity > 0) immunity--;
+    speed += 0.0006; // accélération progressive Dino
   }
 
   /* PLAYER */
@@ -320,10 +222,7 @@ function loop(time){
   /* HUD */
   ctx.fillStyle = "#0d47a1";
   ctx.font = "bold 16px Arial";
-  ctx.textAlign = "left";
-  ctx.textBaseline = "top";
   ctx.fillText("Score : " + score, 12, 12);
-  ctx.fillText("Niveau : " + level, 12, 34);
 
   requestAnimationFrame(loop);
 }
@@ -332,4 +231,3 @@ requestAnimationFrame(loop);
 
 </body>
 </html>
-
